Finalize Evaluator